--- a/doc/05-Conclusion.tex
+++ b/doc/05-Conclusion.tex
@@ -1,7 +1,7 @@
 \section{Conclusion}
 
 The Gilbert2D and Gilbert3D provide a generalization of the Hilbert curve to
-arbitrary rectangular regions in to two and three dimensions, respectively.
+arbitrary rectangular regions in two and three dimensions, respectively.
 Previous work had side length restrictions, involved complicated algorithms or lacked
 easily accessible reference implementations.
 
