--- a/doc/07-Appendix.tex
+++ b/doc/07-Appendix.tex
@@ -35,7 +35,7 @@ If the defect is too high, we might want to split the larger sides while keeping
 \begin{figure}[h]
   \centering
   \includegraphics[width=\linewidth]{gilbert2d_eccentric_appendix.pdf}
-  \caption{ When the length width like dimension ($|\alpha|$) gets larger than a threshold of the height-like
+  \caption{ When the length of the width-like dimension ($|\alpha|$) gets larger than a threshold of the height-like
             dimension ($\sigma |\beta|$), then the width like dimension is split into two. }
   \label{fig:eccentric_2d}
 \end{figure}
@@ -82,13 +82,12 @@ $$
 Since $\sqrt{2} \approx 1.4142 < (3/2)$, if we choose $|\alpha| / |\beta| > (3/2)$ we can
 be assured a defect reduction.
 
-In the case when $|\alpha| > 2 |\beta|$, it is easy to verify that the defect is reduced
-as the ratio of the defects before and after the split is $(1/2)$.
+In the case when $|\alpha| > 2 |\beta|$, it is easy to verify that the defect is always reduced
+\footnote{ The ratio of the defects before and after the split is $(1/2)$ }.
 
 \subsection{3D Eccentric Split Threshold}
 
-Calculations in this section will justify what threshold value to pick of when to choose a 3D
-eccentric split over a J-split.
+Calculations in this section will justify what threshold value to pick for when to choose a 3D eccentric split over a J-split.
 Our concern is to find a simple ratio of when each of $\alpha$, $\beta$ or $\gamma$ are considered
 "small enough" or "large enough", relative to the other dimensions, to split on.
 
