--- a/doc/07-Appendix.tex
+++ b/doc/07-Appendix.tex
@@ -150,57 +150,122 @@ coercing the $A$ volume to a desired parity as needed.
 \end{itemize}
 
 
-When $|\alpha|$ is much larger than $|\beta|$ or $|\gamma|$,
-we split into two sub-cuboids along the $\alpha$ axis,
-which we represent as an $S_0$ split.
-As stated above, we pick the midway point for $\alpha$.
-What's left is to decide how eccentric the cuboid should be to determine when to use the $S_0$ split.
+%When $|\alpha|$ is much larger than $|\beta|$ or $|\gamma|$,
+%we split into two sub-cuboids along the $\alpha$ axis,
+%which we represent as an $S_0$ split.
+%As stated above, we pick the midway point for $\alpha$.
+%What's left is to decide how eccentric the cuboid should be to determine when to use the $S_0$ split.
+%
+%Take $\sigma > 1$ and $s = \text{min}(|\beta|,|\gamma|)$, with $\sigma s = |\alpha|$.
+%The defect of the original volume is:
+%
+%$$
+%\begin{array}{ll}
+%  \lambda(|\alpha|,|\beta|,|\gamma|)  & = \frac{ |\alpha| \cdot |\beta| \cdot |\gamma| }{ (\text{min}(|\alpha|,|\beta|,|\gamma|))^3 } \\
+%                  & = \frac{ \sigma s \cdot s \cdot s }{ (\text{min}(\sigma s,s,s))^3 } \\
+%                  & = \sigma \\
+%\end{array}
+%$$
+%
+%If $|\alpha| > 2 |\beta| = 2s$, then $\text{min}(\frac{|\alpha|}{2},|\beta|,|\gamma|) = s$ and
+%we have an average defect of the subdivided regions as $\lambda_s(V_1) = \frac{\sigma}{2}$,
+%giving us a reduced defect and making progress.
+%Intuitively, we reduce the defect by splitting a long horizontal column into two parts, each of which is more cube like,
+%making it more cube-like on average.
+%
+%We can get a better ratio by asking what the maximum value of $|\alpha| = \sigma s$ is when there is still an average defect reduction.
+%In this case, we restrict $|\alpha| < 2 \text{min}(|\beta|,|\gamma|)$, implying $\text{min}(\frac{|\alpha|}{2},|\beta|,|\gamma|) = \frac{|\alpha|}{2}$.
+%The average defect becomes:
+%
+%$$
+%\begin{array}{ll}
+%  \lambda_s(V_1) & = 2 (\frac{1}{2}) \frac{ \frac{\sigma}{2} \cdot s^3 }{ (\frac{\sigma}{2} s)^3 } \\
+%   & = \frac{4}{\sigma^2}
+%\end{array}
+%$$
+%
+%We want to reduce the average defect relative to the original defect, so:
+%
+%$$
+%\begin{array}{ll}
+%  & \lambda_s (V_1) < \lambda(V_0) \\
+%  \to & \frac{4}{\sigma^2} < \sigma \\
+%  \to & 4^{\frac{1}{3}} < \sigma \\ 
+%  \to & 4^{\frac{1}{3}} = 1.58740\dots < \sigma \\
+%\end{array}
+%$$
+%
+%For any $\sigma > 4^{\frac{1}{3}}$, we know the average defect will be reduced.
+%For algorithmic simplicity, we've chosen the simple fraction $\frac{5}{3}$ (as $\frac{5}{3} > 4^{\frac{1}{3}}$)
+%for the eccentric $S_0$ split ratio.
+%
+%For convenience, we've assumed $|\beta| = |\gamma|$ in the above analysis but it's easy to check that the conclusions of the
+%above calculations remain unchanged when $|\beta| = \mu |\gamma|$ with $\sigma > \mu > 1$.
+%
+%
+%
+%%%%%
+%%%%%
+%%%%%
+%
+%\textbf{UPDATED ARGUMENT:} \textit{(uses $\mu$ for other dimension, tries to be more careful with inequalities)}
 
-Take $\sigma > 1$ and $s = \text{min}(|\beta|,|\gamma|)$, with $\sigma s = |\alpha|$.
-The defect of the original volume is:
+We're splitting at the halfway point on $|\alpha|$ and we want to figure out
+what the eccentric threshold is to split on.
+
+Assume:
 
 $$
 \begin{array}{ll}
-  \lambda(|\alpha|,|\beta|,|\gamma|)  & = \frac{ |\alpha| \cdot |\beta| \cdot |\gamma| }{ (\text{min}(|\alpha|,|\beta|,|\gamma|))^3 } \\
-                  & = \frac{ \sigma s \cdot s \cdot s }{ (\text{min}(\sigma s,s,s))^3 } \\
-                  & = \sigma \\
+  s & = \text{min}(|\beta|, |\gamma|) \\
+  \mu s & = \text{max}(|\beta|, |\gamma|) \\
+  |\alpha| & = \sigma' s > \sigma s \\
+  & \sigma > \mu > 1 \\
 \end{array}
 $$
 
-If $|\alpha| > 2 |\beta| = 2s$, then $\text{min}(\frac{|\alpha|}{2},|\beta|,|\gamma|) = s$ and
-we have an average defect of the subdivided regions as $\lambda_s(V_1) = \frac{\sigma}{2}$,
-giving us a reduced defect and making progress.
-Intuitively, we reduce the defect by splitting a long horizontal column into two parts, each of which is more cube like,
-making it more cube-like on average.
-
-We can get a better ratio by asking what the maximum value of $|\alpha| = \sigma s$ is when there is still an average defect reduction.
-In this case, we restrict $|\alpha| < 2 \text{min}(|\beta|,|\gamma|)$, implying $\text{min}(\frac{|\alpha|}{2},|\beta|,|\gamma|) = \frac{|\alpha|}{2}$.
-The average defect becomes:
+Call $\lambda_0$ the average defect of the original cuboid regoin and $\lambda_1$ the average defect
+after the subdivision at the $\alpha$ halfway point:
 
 $$
 \begin{array}{ll}
-  \lambda_s(V_1) & = 2 (\frac{1}{2}) \frac{ \frac{\sigma}{2} \cdot s^3 }{ (\frac{\sigma}{2} s)^3 } \\
-   & = \frac{4}{\sigma^2}
+  \lambda_0 & = \frac{ |\alpha| \mu s^2 }{ s^3 } = |\alpha| \mu / s \\
+  \lambda_1 & = \left\{
+    \begin{array}{lr}
+      \frac{ (|\alpha| / 2) \mu s^3 }{ s^3 } = |\alpha| \mu / 2 & ( |\alpha| > 2 s) \\
+      \frac{ (|\alpha| / 2) \mu s^3 }{ (|\alpha|/2)^3 } = 4 \mu s^2 / |\alpha|^2  & ( 2 s > |\alpha| > s)
+    \end{array}
+    \right. \\
+  \lambda_1 / \lambda_0 & = \left\{
+    \begin{array}{lr}
+      1/2  & ( |\alpha| > 2 s) \\
+      4 s^3 / |\alpha|^3 & ( 2 s > |\alpha| > s)
+    \end{array}
+    \right.
 \end{array}
 $$
 
-We want to reduce the average defect relative to the original defect, so:
+We measure the relative defect reduction by the ratio $(\lambda_1 / \lambda_0)$.
+For $|\alpha| > 2s$, $(\lambda_1 / \lambda_0 = 1/2)$, a defect reduction.
+
+When $(2s > |\alpha| > s)$, set $|\alpha| = \sigma' \text{min}(|\beta|, |\gamma|)$.
+We consider what values of $\sigma'$ will lead
+to a defect reduction $(\lambda_1 / \lambda_0 < 1)$:
 
 $$
 \begin{array}{ll}
-  & \lambda_s (V_1) < \lambda(V_0) \\
-  \to & \frac{4}{\sigma^2} < \sigma \\
-  \to & 4^{\frac{1}{3}} < \sigma \\ 
-  \to & 4^{\frac{1}{3}} = 1.58740\dots < \sigma \\
+  \lambda_1 / \lambda_0 & = 4 s^3 / |\alpha|^3 < 1 \\
+  \to & |\alpha|^3 > 4 s^3  \\
+  \to & |\alpha| > 4^{\frac{1}{3}} s \\
+  \to & \sigma' s > 4^{\frac{1}{3}} s \\
+  \to & \sigma' > 4^{\frac{1}{3}} \\
 \end{array}
 $$
 
 For any $\sigma > 4^{\frac{1}{3}}$, we know the average defect will be reduced.
-For algorithmic simplicity, we've chosen the simple fraction $\frac{5}{3}$ (as $\frac{5}{3} > 4^{\frac{1}{3}}$)
+For algorithmic simplicity, we've chosen the simple fraction $\sigma = \frac{5}{3}$ (as $\frac{5}{3} > 4^{\frac{1}{3}}$)
 for the eccentric $S_0$ split ratio.
 
-For convenience, we've assumed $|\beta| = |\gamma|$ in the above analysis but it's easy to check that the conclusions of the
-above calculations remain unchanged when $|\beta| = \mu |\gamma|$ with $\sigma > \mu > 1$.
 
 %%%%
 %%%%
@@ -225,43 +290,177 @@ above calculations remain unchanged when $|\beta| = \mu |\gamma|$ with $\sigma >
   \item $\rho = \frac{1}{3}$
 \end{itemize}
 
-Here, we are trying to validate two parameters, $\sigma$ and $\rho$.
-$\sigma$ is the ratio of when $|\gamma|$ (resp. $|\beta|$)
-is larger (resp. smaller) to the minimum (resp. maximum) of the remaining side lengths as the threshold to trigger an $S_1$
-template split.
-$\rho$ is the proportion along the $\gamma$ (resp. $\beta$) direction of where to choose the $\gamma$ direction split.
-The $S_1$ shape template has three subdivided cuboids, which we call $A$, $B$ and $C$, ordered by
-the path traversal through the cuboids.
+%Here, we are trying to validate two parameters, $\sigma$ and $\rho$.
+%$\sigma$ is the ratio of when $|\gamma|$ (resp. $|\beta|$)
+%is larger (resp. smaller) to the minimum (resp. maximum) of the remaining side lengths as the threshold to trigger an $S_1$
+%template split.
+%$\rho$ is the proportion along the $\gamma$ (resp. $\beta$) direction of where to choose the $\gamma$ direction split.
+%The $S_1$ shape template has three subdivided cuboids, which we call $A$, $B$ and $C$, ordered by
+%the path traversal through the cuboids.
+%
+%We will show that there is an average defect reduction when choosing $\sigma = \frac{3}{2}$ and
+%$\rho = \frac{1}{3}$.
+%If we take $s = \text{min}(|\alpha|, |\beta|)$ and $|\gamma| = \sigma s$, then the defect of the original volume is:
+%
+%$$
+%\lambda(V_0) = \sigma
+%$$
+%
+%From our choice of $\sigma$ and $\rho$, $\text{min}( \sigma \rho s, \frac{s}{2} ) = \frac{s}{2}$,
+%implying the minimum side length for $A$ and $C$ is $\frac{s}{2}$ and the minimum side length of $B$
+%is $\text{min}( \sigma (1-\rho) s, s) = s$.
+%From this, we can calculate the average defect of the subdivided cuboid:
+%
+%$$
+%\begin{array}{ll}
+%  \lambda_s (V_1) & = 2 \cdot (\frac{1}{2}) \rho [ \frac{ \rho \sigma s \cdot \frac{s}{2} \cdot s }{ (\frac{s}{2})^3 } ] \\
+%        & + (1-\rho) [ \frac{ (1-\rho) \sigma s \cdot s \cdot s }{s^3} ] \\
+%  & = 4 \sigma \rho^2 + \sigma (1-\rho)^2 \\
+%  & = \frac{8}{9} \sigma = \frac{4}{3} < \frac{3}{2} \\
+%  \to & \lambda_s(V_1) < \lambda(V_0)
+%\end{array}
+%$$
+%
+%Showing there is an average defect reduction.
+%
+%%%%%
+%%%%%
+%%%%%
+%
+%\textbf{UPDATED ARGUMENT:} \textit{(uses $\mu$ for other dimension, tries to be more careful with inequalities)}
 
-We will show that there is an average defect reduction when choosing $\sigma = \frac{3}{2}$ and
-$\rho = \frac{1}{3}$.
-If we take $s = \text{min}(|\alpha|, |\beta|)$ and $|\gamma| = \sigma s$, then the defect of the original volume is:
 
-$$
-\lambda(V_0) = \sigma
-$$
+When the elongated side length is not in the same axis as the start and end point, a simple subdivision won't
+yield a defect reduction.
+We need to be more careful about when and how to subdivide the cuboid to ensure we make a more harmonious split.
 
-From our choice of $\sigma$ and $\rho$, $\text{min}( \sigma \rho s, \frac{s}{2} ) = \frac{s}{2}$,
-implying the minimum side length for $A$ and $C$ is $\frac{s}{2}$ and the minimum side length of $B$
-is $\text{min}( \sigma (1-\rho) s, s) = s$.
-From this, we can calculate the average defect of the subdivided cuboid:
+\subsubsection{ $|\gamma| >> |\alpha| \sim |\beta|$ }
+
+%In what follows, we assume $\gamma$ is the elongated axis.
+%After the calculation, we will discuss the case when $\beta$ is the shorter axis.
+
+Define:
 
 $$
 \begin{array}{ll}
-  \lambda_s (V_1) & = 2 \cdot (\frac{1}{2}) \rho [ \frac{ \rho \sigma s \cdot \frac{s}{2} \cdot s }{ (\frac{s}{2})^3 } ] \\
-        & + (1-\rho) [ \frac{ (1-\rho) \sigma s \cdot s \cdot s }{s^3} ] \\
-   & = 4 \sigma \rho^2 + \sigma (1-\rho)^2 \\
-  & = 4 \sigma \rho^2 + \sigma (1-\rho)^2 \\
-  & = \frac{8}{9} \sigma = \frac{4}{3} < \frac{3}{2} \\
-  \to & \lambda_s(V_1) < \lambda(V_0)
+  s & = \text{min}(|\alpha|, |\beta|) \\
+  \mu s & = \text{max}(|\alpha|, |\beta|) \\
+  |\gamma| & = \sigma' s > \sigma s \\
+   & \sigma > \mu > 1 \\
 \end{array}
 $$
 
-Showing there is an average defect reduction.
+$\sigma$ represents our threshold value of when to choose the $S_1$ subdivision scheme.
+If we've met the condition that $|\gamma| > \text{max}(|\alpha|, |\beta|) > \sigma \text{min}(|\alpha|, |\beta|)$,
+we split at the $\rho$ point
+along the $\gamma$ axis and split the remaining smaller base cuboid at the halfway point on the $\alpha$ axis.
 
-%%%%
-%%%%
-%%%%
+Considering what combination of $\sigma$ and $\rho$ will lead to a defect reduction can be done
+but we satisfy ourselves with showing that a choice of the simple fractions
+$\sigma = 3/2$ and $\rho = 1/3$ suffices to ensure a defect reduction.
+
+From the choice of $\sigma$ and $\rho$, we have that $(\rho \sigma \ge 1/2)$, ensuring that
+the minimum side length of the smallest subdivided cuboid region is $(s/2)$ or $(\mu s/2)$.
+
+As a technical addition, we introduce $\mu' = |\alpha| / s$, with  $\mu'$ equal to either $1$ or $\mu$
+and $\mu' \ge 1$.
+
+To show an average defect reduction, we
+show $\lambda_1 < \lambda_0$ for our choice of $\sigma$ and $\rho$.
+
+$$
+\begin{array}{ll}
+  \lambda_0 & = \frac{ |\gamma| \mu s^2 }{ s^3 } = |\gamma| \mu / s  \\
+  \lambda_1 & = 2 (\frac{\rho}{2}) \left( \frac{(\frac{s}{2}) (\mu s) \rho |\gamma| }{(\frac{s}{2})^3 (\mu')^3 } \right)  
+						  + (1-\rho) \left( \frac{ (1-\rho) |\gamma| \mu s^2}{s^3} \right) \\
+ & =  \frac{ 4 \rho^2 \mu |\gamma|}{s (\mu')^3} + \frac{(1-\rho)^2 \mu |\gamma|}{s}  \\
+\end{array}
+$$
+
+$$
+\begin{array}{llr}
+ & \lambda_1 / \lambda_0 < 1 & \\
+ \to & \left( \frac{ 4 \rho^2 \mu |\gamma|}{s (\mu')^3} + \frac{(1-\rho)^2 \mu |\gamma|}{s} \right) / \left( |\gamma|\mu / s \right)  < 1 & \\
+ \to & (4 \rho^2 / (\mu')^3 ) + (1- \rho)^2 < 1 & \\
+ \to & 4 \rho^2 + (1- \rho)^2 < 1 &  (\mu' > 1) \\
+ \to & 5 \rho^2 + 1 - 2 \rho < 1 &  \\
+ \to & \rho  < 2/5 &  (\rho \ne 0) \\
+\end{array}
+$$
+
+For our choice of $\sigma = 3/2$, the average defect is reduced
+so long as the $\gamma$ split point of $\rho < 2/5$.
+We've chosen $\rho = 1/3 < 2/5$, ensuring an average defect reduction.
+
+\subsubsection{ $|\beta| << |\alpha| \sim |\gamma|$ }
+
+For the case when $|\beta|$ is much smaller than $|\alpha|$ and $|\gamma|$,
+($|\beta| < \text{min}(|\alpha|, |\gamma|) / \sigma$),
+we show that if we still use the same subdivision scheme, splitting $\gamma$ at the $\rho$ point and halfway for the
+remainder cuboid on the $\alpha$, still leads to an average defect reduction.
+
+Here, we take:
+
+$$
+\begin{array}{ll}
+  s & = \text{min}(|\alpha|, |\gamma|) \\
+  \mu s & = \text{max}(|\alpha|, |\gamma|) \\
+  |\beta| & = s / \sigma' < s / \sigma \\
+   & \sigma' \ge \sigma > \mu > 1 \\
+\end{array}
+$$
+
+Though the calculation is somewhat similar, there's an added complication that the minimum side length is
+after the subdivision.
+We add an extra term, $\omega$ to help with our calculation:
+
+$$
+\begin{array}{llr}
+  \omega & = \text{min}( \frac{s}{2}, \rho s, |\beta| = \frac{s}{\sigma'} < \frac{s}{\sigma} ) & \\
+   & = \text{min}( \rho s, |\beta| ) & (\rho = 1/3 < 1/2) \\
+\end{array}
+$$
+
+Only taking terms with $\rho$ or $s$ as a factor since $\mu > 1$. 
+
+We calculate the average defect reduction before and after the subdivision:
+
+
+$$
+\begin{array}{ll}
+  \lambda_0 & = \frac{ |\beta| \mu s^2 }{ |\beta|^3 } = \mu s^2 / |\beta|^2  \\
+  \lambda_1 & = 2 (\frac{\rho}{2}) \left( \frac{\mu (\frac{s}{2}) \rho s |\beta| }{\omega^3} \right)  
+						  + (1-\rho) \left( \frac{ (1-\rho) |\beta| \mu s^2}{ |\beta|^3} \right) \\
+  & =  \frac{ \rho^2 \mu s^2 |\beta| }{2 \omega^3} + \frac{ (1-\rho)^2 \mu s^2 }{ |\beta|^2 } \\
+\end{array}
+$$
+
+Suffice it to check that $\lambda_1 / \lambda_0 < 1$:
+
+$$
+\begin{array}{llr}
+  \lambda_1 / \lambda_0 & = \frac{\rho^2 |\beta|^3}{2 \omega^3} + (1-\rho)^2 < 1 & \\
+  \to & \frac{|\beta|}{\omega} < 10^{\frac{1}{3}} & (\rho = 1/3) \\
+\end{array}
+$$
+
+$$
+\begin{array}{ll}
+  \frac{|\beta|}{\omega} & = \left\{
+    \begin{array}{lr}
+      1 < 10^{\frac{1}{3}} & (\omega = |\beta|) \\
+      \frac{|\beta|}{\rho s} = \frac{1}{\rho \sigma'} < \frac{1}{\rho \sigma} = 1/2 < 10^{\frac{1}{3}}  & (\omega = \rho s = s / 3) \\
+    \end{array}
+  \right. \\
+\end{array}
+$$
+
+Showing our choice of $\sigma = 3/2$ and $\rho = 1/3$ provides an average defect reduction even in the case
+of $|\beta|$ small relative to the other two side lengths.
+
+The constants $\sigma$ and $\rho$ are not optimal in terms of reducing the average defect.
+$\sigma$ and $\rho$ were chosen as a compromise between providing simple ratios while
+still providing an average defect reduction for both of the cases when $|\gamma|$ large or $|\beta|$ small.
 
 
 \subsection{$|\beta| >> |\alpha| \sim |\gamma|$ or $|\alpha| << |\beta| \sim |\gamma|$}
